# odak

./: .gitignore  .mlc_config.json  .pre-commit-config.yaml  .report.md.swp  .sparkleshare  .travis.yml  404.html  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LSP_CONFIG.md  README  README.md  SparkleShare.txt  THANKS.txt  index.html  mkdocs.yml  objects.inv  pyrightconfig.json  report-bandit.json  report.md  requirements.txt  setup.cfg  setup.py  short_readme.md  sitemap.xml  test.py
.github/: FUNDING.yml
.opencode/: README.md  env.example
beginning/: index.html
cgh/: index.html
citations/: check.sh  odak.bib  odak.txt
contributing/: index.html
course/: index.html  optimize_sample.py  ray.txt
docs/: _config.yml  beginning.md  bibliography.bib  cgh.md  contributing.md  index.md  index.rst  installation.md  lensless.md  machine_learning.md  perception.md  raytracing.md  search.html  search_data.json  toolkit.md
includes/: abbreviations.md
installation/: index.html
lensless/: index.html
machine_learning/: index.html
odak/: __init__.py
overrides/: main.html
perception/: index.html
raytracing/: index.html
recordings/: odak_101.cast
script/: references.bib  script.aux  script.bbl  script.blg  script.out  script.tex
search/: search_index.json
test/: __init__.py  heights.pt  holoeye_DragonBunny.txt  sample_latex.tex  temp_util.py  test_3d_gerchberg_saxton.py  test_ColorVideoVDP.py  test_PLY.py  test_beam_propagation.py  test_catalog_plane_detector.py  test_catalog_plano_convex_lens.py  test_catalog_thin_diffuser.py  (+168 more)
(+475 files in other folders)
