[metadata]
name = odak
version = 0.2.7
description = Odak, the fundamental Python library for scientific computing in optical sciences.
author = Kaan Aksit
author_email = kaanaksit@kaanaksit.com
license = MPL-2.0
url = https://github.com/kaanaksit/odak

[options]
packages = find:
package_dir = 
    =odak
install_requires = file: requirements.txt
python_requires = >=3.9

[tool:pytest]
testpaths = test
python_files = test_*.py
addopts = -v --tb=short

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True

[mypy-odak.*]
follow_imports = skip

[flake8]
max-line-length = 127
max-complexity = 10
count = True
show-source = True
statistics = True
exclude = 
    .git,
    __pycache__,
    build,
    dist
select = E9,F63,F7,F82
